<resources>
    <string name="app_name">SchoolTransportApp</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registeration_message">Thank you for registering, we just need a few more details from you before you are fully signed up!</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name"><u>Name</u></string>
    <string name="contact"><u>Child Contact Number</u></string>
    <string name="year_group"><u>Year Group</u></string>
    <string name="school"><u>school</u></string>
    <string name="gender"><u>Gender</u></string>
    <string name="Collection_Date"><u>Collection Date</u></string>
    <string name="Collection_Time"><u>Collection Time</u></string>
</resources>
