<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateAndDelete1"
    android:background="@drawable/background1">

    <Button
        android:id="@+id/save_btn"
        android:layout_width="268dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="278dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_button"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_btn"
        app:layout_constraintVertical_bias="0.515" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="5"
        android:hint="@string/name"
        android:textSize="19dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/childName"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/childName"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/contact"
        android:textSize="19dp"
        app:layout_constraintEnd_toStartOf="@+id/childNum"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/childSchool"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginTop="272dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/school"
        android:textSize="19dp"
        app:layout_constraintEnd_toStartOf="@+id/childSchool"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/childNum"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/year_group"
        android:textSize="19dp"
        app:layout_constraintEnd_toStartOf="@+id/childYear"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/childYear"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginTop="204dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/childGen"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginTop="340dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/gender"
        android:textSize="19dp"
        app:layout_constraintEnd_toStartOf="@+id/childGen"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/colDate"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginTop="408dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/Collection_Date"
        android:textSize="19dp"
        app:layout_constraintEnd_toStartOf="@+id/colDate"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/colTime"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginTop="468dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/Collection_Time"
        android:textSize="19dp"
        app:layout_constraintEnd_toStartOf="@+id/colTime"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:layout_width="67dp"
        android:layout_height="39dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/finallogo">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>